# fileshare

./: Cargo.toml  README.md  config.json  installer.iss  style.css
.github/workflows/: main.yml
config/: config.json
src/: main.rs  server.rs  state.rs  styles.rs  subscriptions.rs  update.rs  view.rs
src/server/: counting_stream.rs  download_service.rs  router.rs  webpage_service.rs
src/state/: client_manager.rs  file_manager.rs  state.rs  subscriptions.rs  theme_selector.rs  update.rs
src/views/: connection_info_pane.rs  download_pane.rs  footer_pane.rs  language.rs  language_macro.rs  no_connection_pane.rs  root_view.rs  styles.rs  upload_pane.rs
static/: index.html  script.js  style.css
template/: file_list.html  index.html
